tenants/team-a/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-api
  namespace: team-a
  annotations:
    nginx.ingress.kubernetes.io/enable-metrics: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: demo-api.team-a.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-api
                port:
                  number: 80
